- Fixed: rent.edit {player} tenant name