@@ -911,12 +911,6 @@ gui:
         entry_offer_neutral_receiver:
           material: INHERIT
 
-  list_land_storage:
-    items:
-      default:
-        entry_item:
-          material: INHERIT
-
   admin_wilderness:
     items:
       default:
