@@ -1,1 +1,3 @@
-- Fixed: rent.edit {player} tenant name
++ Added: [Suggestion] Land item storage
++ Added: [Suggestion] /lands storage - opens the storage inventory
++ Added: [Suggestion] Open the storage inventory by clicking on the land block barrel
